<resources>
    <string name="app_name">SellerHub</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="login">login</string>
    <string name="phone">Phone No.</string>
    <string name="adress">Adress</string>
    <string name="title_activity_login">Sign in</string>
    <string name="p1">Product #1</string>
    <string name="p2">Product #2</string>
    <string name="p3">Product #3</string>
    <string name="bank">Select Bank</string>
    <string name="state">State</string>
    <string-array name="bank_arrays">
        <item>Select Bank</item>
        <item>Abhyudaya Co-operative Bank</item>
        <item>Allahabad Bank</item>
        <item>Andhra Bank</item>
        <item>Axis</item>
        <item>Bank Of Bahrain And Kuwait</item>
        <item>Bank Of Baroda - Corporate Banking</item>
        <item>Bank Of Baroda - Retail Banking</item>
        <item>Bank Of India</item>
        <item>Bank Of Maharashtra</item>
        <item>Bharat Co-Operative Bank - Mumbai</item>
        <item>Canara</item>
        <item>Central Bank Of India</item>
        <item>CITYBANK</item>
        <item>City Union Bank</item>
        <item>Citizen Credit Co-operative Bank</item>
        <item>Corporation Bank</item>
        <item>Cosmos Bank</item>
        <item>Catholic Syrian Bank</item>
        <item>Development Credit Bank</item>
        <item>Dena Bank</item>
        <item>Deutsche bank</item>
        <item>Dhanlaxmi Bank</item>
        <item>Federal Bank</item>
        <item>HDFC</item>
        <item>ICICI</item>
        <item>IDBI</item>
        <item>Indian Bank</item>
        <item>Indian Overseas Bank</item>
        <item>Industrial Bank</item>
        <item>Jammu and Kashmir Bank</item>
        <item>Karur Vysya Bank</item>
        <item>KOTAK</item>
        <item>Karnatka Bank Ltd.</item>
        <item>Laxmi Vilas Bank - Corporate Net Banking</item>
        <item>Laxmi Vilas Bank - Retail Net Banking</item>
        <item>Mumbai District Central Cooperative Bank</item>
        <item>Oriental Bank Of Commerce</item>
        <item>Punjab National Bank - Corporate Banking</item>
        <item>Punjab National Bank - Retail Banking</item>
        <item>Punjab and Sind Bank</item>
        <item>Ratnakar Bank</item>
        <item>Sahebrao Deshmukh Co-operative Bank</item>
        <item>Saraswat Co-operative Bank</item>
        <item>SBI</item>
        <item>Shamrao Vitthal Co-operative Bank</item>
        <item>Shri Arihant Co-operative Bank</item>
        <item>State Bank of Bikaner and Jaipur</item>
        <item>State Bank of Hyderabad</item>
        <item>South Indian Bank</item>
        <item>State Bank of Mysore</item>
        <item>State Bank of Patiala</item>
        <item>Standard Chartered Bank</item>
        <item>State Bank of Travancore</item>
        <item>Syndicate Bank</item>
        <item>Tamilnad Mercentile Bank Ltd.</item>
        <item>TJSB Sahakari Bank</item>
        <item>Union Bank of India</item>
        <item>UCO Bank</item>
        <item>United Bank of India</item>
        <item>Vijaya Bank</item>
        <item>Yes Bank</item>
    </string-array>
    <string-array name="state_arrays">
        <item>State</item>
        <item>Andhra Pradesh</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Delhi NCR</item>
        <item>Orissa</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string-array name="category_arrays">
        <item>Category</item>
        <item>Digital Art</item>
        <item>Drawing</item>
        <item>Painting</item>
        <item>Photography</item>
        <item>Print Making</item>
        <item>Handicraft</item>
        <item>Sculpture</item>
        <item>Serigraph</item>
        <item>Textile</item>
    </string-array>
    <string-array name="style_arrays">
        <item>Style</item>
        <item>Abstract</item>
        <item>Art Deco</item>
        <item>Conceptual</item>
        <item>Cubism</item>
        <item>Decorative</item>
        <item>Digital</item>
        <item>Expressionism</item>
        <item>Fantasy</item>
        <item>Folk</item>
        <item>Futurism</item>
        <item>Geometrical</item>
        <item>Illustration</item>
        <item>Image</item>
        <item>Impressionism</item>
        <item>Minimalism</item>
        <item>Naive</item>
        <item>Pop Art</item>
        <item>Photorealism</item>
        <item>Realism</item>
        <item>Surrealism</item>
        <item>Traditional</item>
        <item>Tribal</item>

    </string-array>

</resources>
