<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chintu.sellerhub.main">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/icon"
                android:src="@drawable/ab"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/t_username"
                android:layout_below="@+id/icon"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true"
                >

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_centerHorizontal="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/t_password"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/t_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                style="?android:textAppearanceSmall"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="20sp"
                android:background="#ece18f23"
                android:layout_below="@+id/t_password"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true"
               />
            <Button
                android:layout_width="300dp"
                android:layout_height="20dp"
                android:background="@android:color/transparent"
                android:text="Forgot Password?"
                android:inputType="text"
                android:id="@+id/frgt_bttn"
                android:padding="1dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/btn_login"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/frgt_bttn"
                android:layout_marginTop="30dp"
                android:id="@+id/t3"
                android:text="Become An Artist Today"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:background="#000000"
                android:text="SIGN UP"
                android:id="@+id/signup_bttn"
                android:padding="2dp"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/t3"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup_bttn"
                android:layout_marginTop="10dp"
                android:id="@+id/t4"
                android:text="By signing up, you agree to ArtBirdz's Terms of Use and Privacy Policy"
                android:textSize="15sp"
                android:textColor="@android:color/background_dark"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
