<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/personal"
    android:background="#e7e5e5">
    <ScrollView
        android:id="@+id/personal_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp"
        android:background="#ffff">
        <com.example.chintu.sellerhub.RoundedImageView
            android:id="@+id/i_userpic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/default_dp"
            android:scaleType="fitXY"
            >
            </com.example.chintu.sellerhub.RoundedImageView>

            <Button
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/get_img"
                android:alpha="0.0"
                android:layout_centerHorizontal="true"
                />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/t_name"
            android:layout_below="@+id/i_userpic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            >

            <AutoCompleteTextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="15dp"
                android:singleLine="true"
                android:layout_centerHorizontal="true"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/t_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Gender:"
            style="bold"
            android:textSize="10sp"
            android:layout_below="@+id/t_name"/>
        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t_name"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@+id/t_gender"
            android:scrollbars="vertical"
            >
            <RadioButton
                android:id="@+id/btn_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:textSize="12dp"
                android:layout_marginLeft="5dp"
                android:checked="true"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:textSize="12dp"
                android:id="@+id/btn_female"
                android:layout_marginLeft="15dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Others"
                android:textSize="12dp"
                android:id="@+id/btn_other"
                android:layout_marginLeft="15dp"/>

        </RadioGroup>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/t_email"
            android:layout_below="@+id/t_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            >

            <AutoCompleteTextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="15dp"

                android:layout_centerHorizontal="true"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/t_phone"
            android:layout_below="@+id/t_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            >


            <AutoCompleteTextView
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLines="1"
                android:textSize="15dp"

                android:singleLine="true"
                android:layout_centerHorizontal="true"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/t_adress"
            android:layout_below="@+id/t_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            >

            <AutoCompleteTextView
                android:id="@+id/tv_adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/adress"
                android:inputType="textEmailAddress"
                android:textSize="15dp"

                android:singleLine="true"
                android:layout_centerHorizontal="true"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/t_city"
            android:layout_below="@+id/t_adress"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            >

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="City"
                android:singleLine="true"
                android:textSize="15dp"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spin_state"
            android:layout_below="@+id/t_adress"
            android:layout_width="175dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/t_city"
            android:prompt="@string/state"
            android:entries="@array/state_arrays">

        </Spinner>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/t_pin"
            android:layout_below="@+id/t_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            >

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Postal Code"
                android:textSize="15dp"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="#ed450d"
            android:text="Next"
            android:id="@+id/btn_pers_next"
            android:padding="2dp"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/t_pin"
            android:layout_marginTop="25dp"/>


        <TextView
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/btn_pers_next"
            android:layout_marginTop="20dp"
            android:id="@+id/t4"
            android:text="By signing up, you agree to ArtBirdz's Terms of Use and Privacy Policy"
            android:textSize="10sp"
            android:textColor="@android:color/background_dark"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sample"
            android:layout_below="@+id/t4"/>


    </RelativeLayout>

    </ScrollView>

</LinearLayout>